Updated files and Html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -682,7 +682,7 @@ html, body {
     padding: 0;
     font-size: 16px;
     position: relative;
-    color: #26272d;
+    color: #f5f5f8;
     line-height: 26px;
 }
 
