--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -630,7 +630,7 @@ html, body {
 
 /* Background colors */
 .gray-bg {
-  background-color: #f5f5f8;
+  background-color: #00cff3;
 }
 
 /* Margin and padding resets */
