--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -699,11 +699,11 @@ body {
 .site-title {
     font-size: 18px;
     line-height: 26px;
-    color: #26272d;
+    color: #fff;
 }
 
 .site-title:hover {
-    color: #26272d;
+    color: #fad9e6;
 }
 
 .site-title span {
@@ -1147,7 +1147,7 @@ body {
 ================================================== */
 
 .site-footer {
-    background-color: #f5f5f8;
+    background-color: #91fae0;
     padding-top: 95px;
 }
 
