--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -840,7 +840,8 @@ body {
 
 .overlay:before {
     content: '';
-    background-color: rgba(192,192,192,0.3);
+    background-color: rgb(54,69,79,0.3);
+
     height: 100%;
     width: 100%;
     position: absolute;
@@ -950,7 +951,7 @@ body {
 
 .site-section {
     padding: 100px 0 140px;
-    background : #ffff
+    background : #ebecf0
 ;
 }
 
@@ -1161,7 +1162,7 @@ color: #2a2b2b ;
 ================================================== */
 
 .site-footer {
-     background-color: grey;
+     background-color: #36454F;
     padding-top: 95px;
   
 }
