--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,8 +76,10 @@ h2,
 h3,
 h4,
 h5 {
-    color: #f7f7f7;
+    color: #eeeeee;
 }
+
+
 
 p+p {
     margin-top: 40px;
@@ -88,6 +90,7 @@ p+p {
 
 .btn {
     line-height: 50px;
+    margin: 10px;
     min-width: 200px;
     font-size: 16px;
     font-weight: 300;
@@ -912,7 +915,9 @@ body {
 .subpage-hero .hero-content,
 .subpage-hero .hero-content h1,
 .subpage-hero a {
-    color: #fff;
+    color: #ffffff;
+    text-decoration: solid;
+
 }
 
 .subpage-hero a:hover {
@@ -929,6 +934,10 @@ body {
 
 .contact-hero {
     background: url(../img/contact-hero.jpg) no-repeat center / cover;
+}
+
+.contact-hero.subpage-hero.overlay:before {
+    background-color: #000000;
 }
 
 
@@ -1144,6 +1153,7 @@ body {
 
 .newsletter-group .btn {
     min-width: 120px;
+    margin: 2px
 }
 
 
@@ -1638,11 +1648,19 @@ a.linkedin-bg:hover {
 
 /* Section: Contact-us */
 
+
 .section-contact-us h2 {
-    font-size: 18px;
+
+    color: #000;
     text-transform: uppercase;
-    padding-bottom: 50px;
     letter-spacing: 1px;
+    text-align: center;
+}
+
+.section-contact-us h5 {
+    color: #000000;
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .section-contact-us .form-group label,
@@ -1658,7 +1676,7 @@ a.linkedin-bg:hover {
 }
 
 .section-contact-us .btn {
-    margin-top: 35px;
+    margin-top: 10px;
 }
 
 .contact-info {
@@ -1687,9 +1705,197 @@ a.linkedin-bg:hover {
 }
 
 
-/* Section: map */
 
-.section-map {
-    height: 500px;
-    width: 100%
+
+
+
+/* Contact-me */
+
+
+
+.w3l-contacts-12 .main-social-1 a {
+    background: var(--theme-color);
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    transition: 0.3s;
+}
+
+.w3l-contacts-12 .cont-add {
+    padding: 20px;
+}
+
+.w3l-contacts-12 .add-2 {
+    margin: 10px 0;
+}
+
+.w3l-contacts-12 .add-3 {
+    margin: 10px 0 0;
+}
+
+.w3l-contacts-12 h3.title-main-cont {
+    font-size: 35px;
+    line-height: 40px;
+    margin-bottom: 10px;
+}
+
+.w3l-contacts-12 p.sub-title-cont {
+    font-size: 17px;
+    line-height: 25px;
+    margin-bottom: 40px;
+}
+
+.w3l-contacts-12 .cont-add {
+    grid-template-columns: 18px 1fr;
+    display: grid;
+    grid-gap: 16px;
+    align-items: center;
+    background: #f5f5f5;
+    border-radius: 4px;
+}
+
+.w3l-contacts-12 .cont-add span.fa {
+    color: var(--opposite-color);
+    font-size: 18px;
+}
+
+.w3l-contacts-12 .cont-add-lft {
+    text-align: left;
+}
+
+.w3l-contacts-12 .cont-add-rgt a:hover {
+    color: var(--opposite-color);
+}
+
+.w3l-contacts-12 .top-inputs {
+    margin-bottom: 1.5rem;
+}
+
+.w3l-contacts-12 form.main-input input,
+.w3l-contacts-12 textarea {
+    color: #222;
+    font-size: 16px;
+    border: none;
+    padding: 12px;
+    border: 1px solid #ddd;
+    width: 100%;
+    line-height: 24px;
+    border-radius: 4px;
+    outline: none;
+}
+
+.w3l-contacts-12 textarea {
+    min-height: 170px;
+    margin: 1.5rem 0;
+    resize: none;
+}
+
+.w3l-contacts-12 .cont-add h4 {
+    font-size: 18px;
+    color: var(--title-color);
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.w3l-contacts-12 .contact-text-sub {
+    line-height: 25px;
+    color: #fa0000;
+    font-size: 18px;
+}
+
+.w3l-contacts-12 .social-icons-con {
+    margin-top: 2.5em;
+}
+
+.w3l-contacts-12 .social-icons-con a span {
+    font-size: 23px;
+    margin: 0 5px;
+}
+
+.w3l-contacts-12 .social-icons-con a span.fa-facebook-square {
+    color: #3b5998;
+}
+
+.w3l-contacts-12 .social-icons-con a span.fa-twitter-square {
+    color: #00acee;
+}
+
+.w3l-contacts-12 .social-icons-con a span.fa-google-plus-square {
+    color: #DD4B39;
+}
+
+.w3l-contacts-12 .map {
+    padding-top: 80px;
+}
+
+.w3l-contacts-12 .map iframe {
+    width: 100%;
+    height: 400px;
+    display: block;
+}
+
+@media screen and (max-width: 991px) {
+
+    .w3l-contacts-12 .contact-top,
+    .w3l-contacts-12 .map {
+        padding-top: 60px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .w3l-contacts-12 .cont-main-top {
+        grid-template-columns: 1fr;
+    }
+
+    .w3l-contacts-12 .social-icons-con {
+        margin-top: 1.5em;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .w3l-contacts-12 h3.title-main-cont {
+        font-size: 30px;
+        line-height: 35px;
+        margin-bottom: 6px;
+    }
+
+    .w3l-contacts-12 p.sub-title-cont {
+        font-size: 16px;
+        line-height: 23px;
+        margin-bottom: 30px;
+    }
+
+    .w3l-contacts-12 .map iframe {
+        height: 350px;
+    }
+}
+
+@media screen and (max-width: 414px) {
+
+    .w3l-contacts-12 .contact-top {
+        margin: 50px;
+    }
+
+    .w3l-contacts-12 .map {
+        padding-top: 40px;
+    }
+
+    .w3l-contacts-12 .top-inputs {
+        grid-template-columns: 1fr;
+        grid-gap: 15px;
+        margin-bottom: 1rem;
+    }
+
+    .w3l-contacts-12 textarea {
+        margin: 1rem 0 1.5rem;
+    }
+}
+
+@media screen and (max-width: 384px) {
+    .w3l-contacts-12 .line {
+        margin: 3em 0;
+    }
 }
