--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1791,6 +1791,7 @@ a.linkedin-bg:hover {
 }
 
 .w3l-contacts-12 form.main-input input,
+
 .w3l-contacts-12 textarea {
     color: #222;
     font-size: 16px;
@@ -1914,11 +1915,37 @@ a.linkedin-bg:hover {
     .w3l-contacts-12 .line {
         margin: 3em 0;
     }
-<<<<<<< HEAD
+
+
 }
 
 
+#movetop {
+    display: none;
+    position: fixed;
+    bottom: 15px;
+    right: 15px;
+    z-index: 99;
+    font-size: 18px;
+    cursor: pointer;
+    color: rgb(231, 55, 55);
+    width: 36px;
+    height: 36px;
+    line-height: 36px;
+    border-width: initial;
+    border-style: none;
+    border-color: initial;
+    -o-border-image: initial;
+    border-image: initial;
+    outline: none;
+    background: var(--opposite-color);
+    padding: 0px;
+    border-radius: 4px;
+    transition: all 0.5s ease-out 0s;
 
-=======
 }
->>>>>>> 7b42ffe7d8b0a50f2f87add89ea37620efc432e5
+
+#movetop:hover {
+    background-color: rgb(0, 0, 0);
+    /* Add a dark-grey background on hover */
+}
